# readstl

./: CMakeLists.txt  README.md
include/: STLmodel.h  Texture.h  Vertex.h  ball.h  camera.h  item.h  speedUp.h  world.h
shader/: fShader.fs  lightShader.vs  vShader.vs
src/: STLmodel.cpp  Texture.cpp  main.cpp  world.cpp
stl/: som_3d.stl
